DS-4122 by maikelkoopman: update search form in new region, fix select icon visible and make sure close button doesn't reset the form

--- a/themes/socialbase/components/03-molecules/navigation/navbar/navbar.scss
+++ b/themes/socialbase/components/03-molecules/navigation/navbar/navbar.scss
@@ -368,148 +368,146 @@
 
 .navbar-search {
 
-  .navbar-form {
+  .search-content-form {
     padding: 10px 10px 5px;
     border: 0;
+    position: relative;
 
     .form-group {
       margin-bottom: 0;
     }
 
-    // Undo 100% width for pull classes
-    @include for-tablet-landscape-up {
-      width: auto;
-      margin: 6px 0;
-      padding-top: 0;
-      padding-bottom: 0;
-    }
   }
 
-  .form--navbar-search {
-    position: relative;
-
-    .form-control {
-      padding: $padding-base-vertical 38px $padding-base-vertical $padding-base-horizontal;
-      max-width: none;
-      border: 0;
-    }
-
-    .form-submit {
-      width: 38px;
-      height: 38px;
-      display: block;
-      position: absolute;
-      overflow: hidden;
-      right: 0;
-      top: 0;
-      line-height: 38px;
-      cursor: pointer;
-      font-size: 0;
-      text-indent: -9999px;
-      background-image: url('../images/icons/icon-search.svg');
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-color: #fff;
-      background-size: 30px auto;
-      padding: 0;
-    }
-
-  }
-
-}
-
-.search-take-over {
-  height: 50px;
-  position: fixed;
-  top: 50%;
-  background-color: #fff;
-  width: 100%;
-  z-index: $zindex-modal;
-  pointer-events: none;
-  opacity: 0;
-  transform: translate(40px, 0);
-  transition: all 0.3s ease-in-out;
-
-  .form-group {
-    margin: auto;
-    width: 80%;
-    max-width: 500px;
-    display: flex;
-  }
-
-  .form-text {
-    font-size: 34px;
-    height: 54px;
-    border: 0;
-    background: transparent;
-    -webkit-appearance: none;
-    outline: 0;
-    border-radius: 0;
-    border-bottom: 2px solid;
-    font-weight: 500;
+  .form-control {
+    padding: $padding-base-vertical 38px $padding-base-vertical $padding-base-horizontal;
     max-width: none;
+    border: 0;
   }
 
   .form-submit {
-    width: 60px;
-    height: 60px;
+    width: 38px;
+    height: 38px;
+    display: block;
+    position: absolute;
+    overflow: hidden;
+    right: 0;
+    top: 0;
+    line-height: 38px;
+    cursor: pointer;
+    font-size: 0;
+    text-indent: -9999px;
     background-image: url('../images/icons/icon-search.svg');
     background-repeat: no-repeat;
     background-position: center center;
     background-color: #fff;
-    background-size: 50px auto;
+    background-size: 30px auto;
     padding: 0;
-    font-size: 0;
-    text-indent: -9999px;
-    cursor: pointer;
   }
 
 }
 
+.region--content-top .search-take-over,
 .btn--close-search-take-over {
-  background-color: transparent;
-  border: 0;
-  width: 48px;
-  height: 48px;
-  padding: 0;
-  position: fixed;
-  top: 80px;
-  right: 80px;
-  opacity: 0;
-  transform: translate(10px, 0) rotate(90deg);
-  transition: all 0.3s ease-in-out;
-
-  svg {
-    height: 48px;
+  @include for-tablet-landscape-down {
+    display: none;
   }
 }
 
-
-.mode-search {
-
-  overflow: hidden;
+@include for-tablet-landscape-up {
 
   .search-take-over {
-    opacity: 1;
-    transform: none;
-    pointer-events: all;
-  }
+    height: 50px;
+    position: fixed;
+    top: 50%;
+    background-color: #fff;
+    width: 100%;
+    z-index: $zindex-modal;
+    pointer-events: none;
+    opacity: 0;
+    transform: translate(40px, 0);
+    transition: all 0.3s ease-in-out;
 
-  .navbar-fixed-top {
-    z-index: $zindex-modal-background;
-    background: white;
-    transform: scale(70);
-  }
+    .form-group {
+      margin: auto;
+      width: 80%;
+      max-width: 500px;
+      display: flex;
+    }
 
-  .main-container {
-     z-index: auto;
-      pointer-events: none;
-   }
+    .form-text {
+      font-size: 34px;
+      height: 54px;
+      border: 0;
+      background: transparent;
+      -webkit-appearance: none;
+      outline: 0;
+      border-radius: 0;
+      border-bottom: 2px solid;
+      font-weight: 500;
+      max-width: none;
+    }
+
+    .form-submit {
+      width: 60px;
+      height: 60px;
+      background-image: url('../images/icons/icon-search.svg');
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-color: #fff;
+      background-size: 50px auto;
+      padding: 0;
+      font-size: 0;
+      text-indent: -9999px;
+      cursor: pointer;
+    }
+
+  }
 
   .btn--close-search-take-over {
-    opacity: 1;
-    transform: none;
-    pointer-events: all;
+    background-color: transparent;
+    border: 0;
+    width: 48px;
+    height: 48px;
+    padding: 0;
+    position: fixed;
+    top: 80px;
+    right: 80px;
+    opacity: 0;
+    transform: translate(10px, 0) rotate(90deg);
+    transition: all 0.3s ease-in-out;
+
+    svg {
+      height: 48px;
+    }
+  }
+
+  .mode-search {
+    overflow: hidden;
+
+    .search-take-over {
+      opacity: 1;
+      transform: none;
+      pointer-events: all;
+    }
+
+    .navbar-fixed-top {
+      z-index: $zindex-modal-background;
+      background: white;
+      transform: scale(70);
+    }
+
+    .main-container {
+      z-index: auto;
+      pointer-events: none;
+    }
+
+    .btn--close-search-take-over {
+      opacity: 1;
+      transform: none;
+      pointer-events: all;
+    }
+
   }
 
 }
